--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -5,8 +5,8 @@
 :root {
   --global-bg-color: #{$white-color};
   --global-code-bg-color: #{$code-bg-color-light};
-  --global-text-color: #{$black-color};
-  --global-text-color-light: #{$grey-color};
+  --global-text-color: #{$grey-color};
+  --global-text-color-light: #{$grey-color-light};
   --global-theme-color: #{$orange-color};
   --global-hover-color: #{$orange-color};
   --global-footer-bg-color: #{$grey-color-dark};
