--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -6,7 +6,7 @@
   --global-bg-color: #{$white-color};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$grey-color};
-  --global-text-color-light: #{$grey-color-light};
+  --global-text-color-light: #{$grey-color};
   --global-theme-color: #{$orange-color};
   --global-hover-color: #{$orange-color};
   --global-footer-bg-color: #{$grey-color-dark};
