--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,7 @@
 p, em, div, li, span, strong {
   color: var(--global-text-color);
   font-family: 'Source Serif Pro', serif;
+}
 
 h1, h2, h3, h4 {
   color: var(--global-theme-color);
