--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,12 +7,12 @@
 //p, h1, h2, h3, h4, h5, h6, em, div, li, span, strong {
 p, em, div, li, span, strong {
   color: var(--global-text-color);
-  font-family: 'Source Serif Pro', serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 h1, h2, h3, h4 {
-  color: var(--global-theme-color);
-  font-family: 'Source Sans Pro', sans-serif;
+  color: var(--global-text-color);
+  font-family: 'Source Serif Pro', serif;
 }
 
 hr {
@@ -260,7 +260,7 @@ blockquote {
 .social {
   text-align: center;
   .contact-icons {
-    font-size: 4rem;
+    font-size: 2rem;
     a {
       i::before {
         color: var(--global-text-color);
